themes: Fix undesired spacing in TopMenu popup scrollbar
https://phabricator.endlessm.com/T21701

--- a/data/css/gallery.scss
+++ b/data/css/gallery.scss
@@ -51,15 +51,10 @@
     margin-top: 0;
 }
 
-.WindowSimple {
-    scrollbar {
-        padding: 3px;
-        background-color: transparent;
-        // margin-top is for being covered by Layout.TopMenu
-        margin-top: 50px;
-
-        slider {
-            background-color: transparentize(#787c7d, 1 - 0.50);
-        }
+.WindowSimple scrollbar {
+    padding: 3px;
+    background-color: transparent;
+    slider {
+        background-color: transparentize(#787c7d, 1 - 0.50);
     }
 }
