--- a/data/css/news.scss
+++ b/data/css/news.scss
@@ -118,10 +118,3 @@ $support-font: 'Fira Sans' !default;
         }
     }
 }
-
-.WindowSimple {
-    scrollbar {
-        // margin-top is for being covered by Layout.TopMenu
-        margin-top: 50px;
-    }
-}
